[package]
name = "hft_orderbook"
version = "0.1.0"
edition = "2021"
authors = ["HFT Orderbook Contributors"]
description = "High-frequency trading limit order book implementation in Rust"
license = "MIT"
repository = "https://github.com/your-repo/hft-orderbook"
keywords = ["trading", "orderbook", "hft", "finance"]
categories = ["algorithms", "data-structures"]

[dependencies]
# For benchmarking and testing
criterion = { version = "0.5", features = ["html_reports"] }
# For random number generation in tests
rand = "0.8"
# For serialization if needed
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = []
serde_support = ["serde"]

[[bench]]
name = "orderbook_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
